| Summary: | ASTERISK-25668: res_pjsip: Deadlock in distributor | ||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |
| Date Opened: | 2016-01-07 15:40:25.000-0600 | Date Closed: | 2016-01-07 16:59:05.000-0600 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 13.6.0 | Frequency of Occurrence | One Time |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | There is a deadlock in the distributor in res_pjsip. When receiving a response to a request that ends a dialog, it will first lock the dialog, then lock the transaction in order to try to find the proper serializer on which to put the response. However, this is at odds with what goes on under the hood in PJSIP when handling the response. Therefore, if two responses are received in rapid succession, it's possible for the first response, which is being handled by PJSIP, to deadlock with the distributor handling the second response. | ||
| Comments: | |||